# jser

./: .gitmodules  CMakeLists.txt  Readme.md
jser/example/: main.cpp
jser/src/: AnnotationsType.hpp  CTException.hpp  CTString.hpp  Concepts.hpp  Deserialize.hpp  DeserializeBasic.hpp  DeserializeObject.hpp  ObjectSerializationContext.hpp  ReadBasic.hpp  Serialize.hpp  SerializeBasic.hpp  SerializeObject.hpp  Traits.hpp
jser/src/detail/: Helpers.hpp  SerializeForward.hpp
jser/src/readwrite/: Basic.hpp  Helpers.hpp  Object.hpp  Range.hpp
jser/tests/: CMakeLists.txt  Deserialization.cpp  Serialization.cpp
jser/untested/: AnnotationsField.hpp  AnnotationsType.hpp  Concepts.hpp  Deserialize.hpp  DeserializeCustomType.hpp  DeserializeObject.hpp  ObjectDeserializationContext.hpp  ObjectSerializationContext.hpp  SerializeBasic.hpp
jser/untested/detail/: Annotations.hpp  Concepts.hpp
jser/untested/example/: main.cpp
jser/utopia/: Utopia.hpp
jser/utopia/crazy_formatters/: FormatterConcepts.hpp
src/: Annotations.hpp  AnnotationsField.hpp  CTException.hpp  CTString.hpp  Concepts.hpp  DeserializeCustomType.hpp  Example.hpp  Generator.hpp  Serialize.hpp  SerializeBasic.hpp  SerializeObject.hpp  Validation.hpp  main.cpp
src/detail/: Annotations.hpp  Concepts.hpp  Helpers.hpp
src/utopia/: Utopia.hpp  main.cpp
src/utopia/crazy_formatters/: BasicFormatter.hpp
